--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "my-midway-project",
-	"version": "3.0.0",
+	"version": "3.0.1",
 	"description": "",
 	"private": true,
 	"dependencies": {
@@ -57,11 +57,7 @@
 		"build": "mwtsc --cleanOutDir",
 		"prepare": "husky",
 		"commit": "git add . && git-cz",
-		"release": "standard-version",
-		"release-major": "standard-version --release-as major",
-		"release-minor": "standard-version --release-as minor",
-		"release-patch": "standard-version --release-as patch",
-		"release-static": "standard-version --release-as 3.3.3"
+		"release": "standard-version"
 	},
 	"repository": {
 		"type": "git",
