--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"@midwayjs/bootstrap": "^3.12.0",
 		"@midwayjs/core": "^3.12.0",
+		"@midwayjs/i18n": "3",
 		"@midwayjs/info": "^3.12.0",
 		"@midwayjs/koa": "^3.12.0",
 		"@midwayjs/logger": "^3.1.0",
