--- a/script/template/entity.template
+++ b/script/template/entity.template
@@ -1,7 +1,7 @@
 import { Entity, Column } from 'typeorm';
-import { BaseEntity } from '../../../../common/base-entity';
+import { BaseEntity } from '../../../common/base.entity';
 
-@Entity('$5_$4')
+@Entity('$5')
 export class $1Entity extends BaseEntity {
   @Column({ comment: '名称' })
   name?: string;
